# rust-sdk

./: Cargo.toml
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: client.rs  service.rs
crates/mcp-client/src/transport/: mod.rs  sse.rs  stdio.rs
crates/mcp-macros/: Cargo.toml
crates/mcp-macros/examples/: calculator.rs
crates/mcp-macros/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: errors.rs  lib.rs  main.rs  router.rs
crates/mcp-spec/: Cargo.toml
crates/rmcp/src/: model.rs
crates/rmcp/src/model/: extension.rs
crates/rmcp/tests/: test_message_schema.rs
crates/rmcp/tests/test_message_schema/: client_json_rpc_message_schema.json  server_json_rpc_message_schema.json
