[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
mcp-spec = { path = "./crates/mcp-spec" }
mcp-macros = { path = "./crates/mcp-macros" }

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Block <ai-oss-tools@block.xyz>"]
license = "MIT"
repository = "https://github.com/modelcontextprotocol/rust-sdk/"
description = "Rust SDK for the Model Context Protocol"
